# Subtle

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  subtle.py
.github/workflows/: publish-pypi.yml  publish.yml  syntax.yml
subtle/: __init__.py  common.py  config.py  constants.py  guimain.py  shared.py
subtle/core/: icons.py  media.py  mediafile.py  mkvextract.py  mkvfile.py  ocrbase.py  pgsreader.py  spellcheck.py  srtfile.py  tesseract.py
subtle/formats/: base.py  pgssubs.py  srtsubs.py  ssasubs.py
subtle/gui/: filetree.py  highlighter.py  imageviewer.py  mediaplayer.py  mediaview.py  subsview.py  texteditor.py  toolspanel.py
subtle/ocr/: base.py  tesseract.py
subtle_gui/: __init__.py  common.py  config.py  constants.py  guimain.py  shared.py
subtle_gui/core/: icons.py  media.py  mediafile.py  mkvextract.py  spellcheck.py
subtle_gui/formats/: base.py  pgssubs.py  srtsubs.py  ssasubs.py
subtle_gui/gui/: filetree.py  highlighter.py  imageviewer.py  mediaview.py  subsview.py  texteditor.py  toolspanel.py
subtle_gui/ocr/: base.py  tesseract.py
tests/: test_common.py
tests/test_formats/: test_pgssubs.py
