[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "subtle"
authors = [{ name = "Veronica Berglyd Olsen", email = "code@vkbo.net" }]
description = "A simple subtitle editor and converter"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GNU General Public License v3" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Multimedia",
]
requires-python = ">=3.11"
dependencies = ["pyqt6>=6.4", "pyenchant>=3.0.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/vkbo/subtle"
Repository = "https://github.com/vkbo/subtle"
Issues = "https://github.com/vkbo/subtle/issues"

[project.gui-scripts]
subtle = "subtle:main"

[tool.setuptools.dynamic]
version = { attr = "subtle.__init__.__version__" }

[tool.setuptools.packages.find]
include = ["subtle*"]

[tool.isort]
py_version = "311"
line_length = 99
wrap_length = 79
multi_line_output = 5
force_grid_wrap = 0
lines_between_types = 1
forced_separate = ["tests.*", "PyQt6.*"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = false

# Rules: https://docs.astral.sh/ruff/rules
select = [
    "A",    # flake8-builtins (A)
    "ANN",  # flake8-annotations (ANN)
    "B",    # flake8-bugbear (B)
    "E",    # pycodestyle (E)
    "F",    # Pyflakes (F)
    "FA",   # flake8-future-annotations (FA)
    "PERF", # Perflint (PERF)
    "PLC",  # Pylint Convention (PLC)
    "PLE",  # Pylint Error (PLE)
    "PLW",  # Pylint Warning (PLW)
    "Q",    # flake8-quotes (Q)
    "RUF",  # Ruff-specific rules (RUF)
    "SLF",  # flake8-self (SLF)
    "SLOT", # flake8-slots (SLOT)
    "TC",   # flake8-type-checking (TC)
    "UP",   # pyupgrade (UP)
    "W",    # pycodestyle (W)
]
ignore = [
    "ANN401",  # any-type
    "E221",    # multiple-spaces-before-operator
    "E226",    # missing-whitespace-around-arithmetic-operator
    "E228",    # missing-whitespace-around-modulo-operator
    "E241",    # multiple-spaces-after-comma
    "E272",    # multiple-spaces-before-keyword
    "PLC0415", # import-outside-top-level
    "PLC1901", # compare-to-empty-string
    "PLW0108", # unnecessary-lambda
    "PLW2901", # redefined-loop-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "UP015",   # redundant-open-modes
    "UP030",   # format-literals
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "SLF", "TC", "PLC2701"]
"utils/*" = ["ANN", "SLF", "TC"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["subtle"]
exclude = ["**/__pycache__"]

reportIncompatibleMethodOverride = false

pythonVersion = "3.11"
