[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "subtle-gui"
authors = [{ name = "Veronica Berglyd Olsen", email = "code@vkbo.net" }]
description = "A simple subtitle editor and converter"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GNU General Public License v3" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Multimedia",
]
requires-python = ">=3.11"
dependencies = ["pyqt6>=6.4", "pyenchant>=3.0.0"]
dynamic = ["version"]

[dependency-groups]
dev = [
    { include-group = "build" },
    { include-group = "test" },
    { include-group = "lint" },
]
build = ["build", "setuptools>=77.0.3"]
test = ["coverage>=7.2.0", "pytest-qt", "pytest-timeout", "pytest>=6.0.0"]
lint = ["pyright", "ruff"]

[project.urls]
Homepage = "https://github.com/vkbo/subtle"
Repository = "https://github.com/vkbo/subtle"
Issues = "https://github.com/vkbo/subtle/issues"

[project.gui-scripts]
subtle = "subtle_gui:main"

[tool.setuptools.dynamic]
version = { attr = "subtle_gui.__init__.__version__" }

[tool.setuptools.packages.find]
include = ["subtle_gui*"]

[tool.setuptools.package-data]
subtle_gui = ["assets/**"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules
select = [
    "A",     # flake8-builtins (A)
    "ANN",   # flake8-annotations (ANN)
    "B",     # flake8-bugbear (B)
    "C4",    # flake8-comprehensions (C4)
    "D",     # pydocstyle (D)
    "E",     # pycodestyle (E)
    "F",     # Pyflakes (F)
    "FA",    # flake8-future-annotations (FA)
    "G",     # flake8-logging-format (G)
    "I",     # isort (I)
    "ISC",   # flake8-implicit-str-concat (ISC)
    "LOG",   # flake8-logging (LOG)
    "PERF",  # Perflint (PERF)
    "PIE",   # flake8-pie (PIE)
    "PLC",   # Pylint Convention (PLC)
    "PLE",   # Pylint Error (PLE)
    "PLR17", # Refactor (PLR) - Only PLR17xx
    "PLW",   # Pylint Warning (PLW)
    "PT",    # flake8-pytest-style (PT)
    "Q",     # flake8-quotes (Q)
    "RET",   # flake8-return (RET)
    "RUF",   # Ruff-specific rules (RUF)
    "SIM",   # flake8-simplify (SIM)
    "SLF",   # flake8-self (SLF)
    "SLOT",  # flake8-slots (SLOT)
    "TC",    # flake8-type-checking (TC)
    "TID",   # flake8-tidy-imports (TID)
    "UP",    # pyupgrade (UP)
    "W",     # pycodestyle (W)
]
ignore = [
    "ANN401",  # any-type
    "D107",    # undocumented-public-init
    "D203",    # incorrect-blank-line-before-class
    "D205",    # missing-blank-line-after-summary
    "D213",    # multi-line-summary-second-line
    "PLC0415", # import-outside-top-level
    "PLC1901", # compare-to-empty-string
    "PLW0108", # unnecessary-lambda
    "PLW0717", # too-many-statements-in-try-clause
    "PLW2901", # redefined-loop-name
    "RET505",  # superfluous-else-return
    "RUF001",  # ambiguous-unicode-character-string
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "RUF067",  # non-empty-init-module
    "SIM108",  # if-else-block-instead-of-if-exp
    "UP015",   # redundant-open-modes
    "UP030",   # format-literals
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D101", "D102", "D105", "PLC2701", "RUF069", "SLF", "TC"]

[tool.ruff.lint.isort]
lines-between-types = 1
forced-separate = ["tests"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["subtle_gui"]
reportIncompatibleMethodOverride = false
pythonVersion = "3.11"

[tool.coverage.run]
branch = false
source = ["subtle_gui"]

[tool.coverage.report]
precision = 2
exclude_also = ["if TYPE_CHECKING:"]
